feat: add custom model support
